Bug 61675 - [regression] Weston: fade animation / springs
Summary: [regression] Weston: fade animation / springs
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-02 03:06 UTC by min2
Modified: 2013-06-17 17:11 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description min2 2013-03-02 03:06:39 UTC
steps to reproduce:

1. use light wallpaper
2. start black terminal
3. observe at the end of fade animation

relevant weston.ini:
[shell]
animation=fade, 


expected result: fade is uniform, 

actual result: the spring function are a bit rusty should be linear (best visible before the spring animation completion) 

bad commit:
git revert ee4160544662c298102f2f7183ba5d3520da63ad
Comment 1 Kristian Høgsberg 2013-04-09 19:31:59 UTC
I don't understand the problem you're describing - the fade looks just fine here.  You may have been seeing a side effect of the repaint timestamp bug, which made animation stutter or stall.
Comment 2 Pekka Paalanen 2013-04-10 06:14:35 UTC
I did not try to reproduce this problem, but I have guess: the spring parameters used for the "fade" cause overshoot and ringing. This can be easily observed in the spring simulation (provided I got it right):
http://cgit.collabora.com/git/user/pq/weston-spring.git/

AFAICT, the parameters in the simulation are already the same as used for "fade" in Weston, so all you need to do is 'make', and look at the graph.

The curve starts from zero, shoots over to 1.2 or so, and returns to roughly 0.95, before finally stabilising towards 1.0 again, and finishing. I didn't notice anything that would stop the animation, when it hits >=1.0 the first time.

Martin, does this sound like a probable cause, or was it something else you observed? Your description is not too clear on what you mean.
Comment 3 Kristian Høgsberg 2013-06-17 17:11:43 UTC
I see the problem, spring tweak committed:

commit bca579d31cecca96c920a5d96fdbf71656c716bd
Author: Kristian Høgsberg <krh@bitplanet.net>
Date:   Mon Jun 17 10:10:28 2013 -0400

    spring: Tweak the window fade-in spring to not overshoot
    
    The fade animation overshoots and rings for a bit dipping back into
    slightly transparent.  Bug 61675 was right.
    
    https://bugs.freedesktop.org/show_bug.cgi?id=61675


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.